# company-research-streamlit-demo

./: .env  README.md  requirements.txt  research.md  word_file_converter.py
.devcontainer/: devcontainer.json
companyresearcher/: README.md  pyproject.toml
companyresearcher/knowledge/: user_preference.txt
companyresearcher/src/companyresearcher/: crew.py  jobsearch.py  linkedinsearch.py  research.md
companyresearcher/src/companyresearcher/config/: agents.yaml
companyresearcher/src/companyresearcher/tools/: custom_tool.py
companyresearcher/src/companyresearcher/utils/: output_handler.py
src/companyresearcher/: config.toml  crew.py  linkedinsearch.py  main.py  research.md  streamlit_app.py  word_file_converter.py
src/companyresearcher/config/: agents.yaml  tasks.yaml
src/companyresearcher/tools/: custom_tool.py
