[project]
name = "companyresearcher"
version = "0.1.0"
description = "CompanyResearcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
companyresearcher = "companyresearcher.main:run"
run_crew = "companyresearcher.main:run"
train = "companyresearcher.main:train"
replay = "companyresearcher.main:replay"
test = "companyresearcher.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
